src/test/ui/parser/keyword-continue-as-identifier.stderr
error: expected pattern, found keyword `continue`
  --> $DIR/keyword-continue-as-identifier.rs:4:9
   |
LL |     let continue = "foo";
   |         ^^^^^^^^ expected pattern

error: aborting due to previous error

